helm-echoserver/deployment.yaml
apiVersion: apps/v1beta1  # for k8s versions after 1.9.0 use apps/v1
kind: Deployment
metadata:
  name: deployment-name
  labels:
    generator: helm
    time: deploy-time # make me dynamic
    chart: chart-name # make me dynamic
    version: chart-version # make me dynamic
    release: release-name # make me dynamic
spec:
  replicas: 1    ## if I am not set, make my default 1
  selector:
    matchLabels:
      generator: helm
      time: deploy-time # make me dynamic
      chart: chart-name # make me dynamic
      version: chart-version # make me dynamic
      release: release-name # make me dynamic
  template:
    metadata:
      labels:
        generator: helm
        time: deploy-time # make me dynamic
        chart: chart-name # make me dynamic
        version: chart-version # make me dynamic
        release: release-name # make me dynamic
    spec:
      containers:
      # [start of helm-echoserver  container]
      - name: echo-server # make me required
        image: praqma/helm-echoserver:1.0 # make me dynamic
        imagePullPolicy: Always # make my default = Always
        ports:
        - containerPort: 8080
